# Cx_lang

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  prune-merged-branches.yml
bench/: BASELINE.md  baseline_0_1.md  callgrind_to_folded.py
bench/flamegraphs/: arith_loop.callgrind.txt  fib_recursive.callgrind.txt
bench/programs/: arith_loop.cx  array_ops.cx  compile_stress.cx  fib_iterative.cx  fib_recursive.cx  float_math.cx  (+6 more)
daily_log/: 2026-03-13.md  2026-03-14.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-28.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-22.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-28.md  2026-04-29.md  2026-05-01.md  2026-05-02.md  2026-05-05.md  2026-05-09.md  2026-05-23.md  2026-05-24-pillar2.md  2026-05-24-pillar3.md  2026-05-24-pillar4.md  2026-05-24.md  (+16 more)
docment/: ROADMAP.md
docs/: ROADMAP_v3.1.md  backend_plan.md  backlog_notes.md  cx_flags.md  cx_syntax.md  devshell.md  memory_safety.md
public/: robots.txt
report/: architecture.md  architecture_risks.md  correctness.md  deep_dive_synthesis.md  dx.md  first_user_audit.md  performance.md
scripts/: devshell.ps1
src/: diagnostics.rs  diff_harness.rs  main.rs  parser.rs  semantic.rs
(+442 files in other folders)
