[package]
name = "Cx_0V"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.16.1"
chumsky = "0.10"
colored = "2"
crossterm = "0.27"
cranelift-codegen = "0.115"
cranelift-frontend = "0.115"
cranelift-module = "0.115"
cranelift-jit = "0.115"
cranelift-native = "0.115"
bumpalo = { version = "3", features = ["collections"] }
